--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sass-loader": "^7.1.0",
         "smooth-scroll": "^15.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.6"
+        "vue-template-compiler": "^2.6.6",
+        "vuex": "^3.1.0"
     }
 }
